src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__b.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 3902
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declarations": [
        {
          "end": 36,
          "id": {
            "end": 11,
            "name": "myVar",
            "start": 6,
            "type": "Identifier"
          },
          "init": {
            "arguments": [
              {
                "end": 19,
                "raw": "5",
                "start": 18,
                "type": "Literal",
                "type": "Literal",
                "value": 5.0
              },
              {
                "argument": {
                  "arguments": [
                    {
                      "end": 31,
                      "raw": "5",
                      "start": 30,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 5.0
                    },
                    {
                      "end": 34,
                      "raw": "4",
                      "start": 33,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 4.0
                    }
                  ],
                  "callee": {
                    "end": 29,
                    "name": "legLen",
                    "start": 23,
                    "type": "Identifier"
                  },
                  "end": 35,
                  "start": 23,
                  "type": "CallExpression",
                  "type": "CallExpression"
                },
                "end": 35,
                "operator": "-",
                "start": 22,
                "type": "UnaryExpression",
                "type": "UnaryExpression"
              }
            ],
            "callee": {
              "end": 17,
              "name": "min",
              "start": 14,
              "type": "Identifier"
            },
            "end": 36,
            "start": 14,
            "type": "CallExpression",
            "type": "CallExpression"
          },
          "start": 6,
          "type": "VariableDeclarator"
        }
      ],
      "end": 36,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 36,
  "start": 0
}
