src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ba.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 132,
        "id": {
          "end": 16,
          "name": "sketch001",
          "start": 7,
          "type": "Identifier"
        },
        "init": {
          "body": [
            {
              "arguments": [
                {
                  "end": 37,
                  "raw": "'XY'",
                  "start": 33,
                  "type": "Literal",
                  "type": "Literal",
                  "value": "XY"
                }
              ],
              "callee": {
                "end": 32,
                "name": "startSketchOn",
                "start": 19,
                "type": "Identifier"
              },
              "end": 38,
              "start": 19,
              "type": "CallExpression",
              "type": "CallExpression"
            },
            {
              "arguments": [
                {
                  "end": 131,
                  "start": 130,
                  "type": "PipeSubstitution",
                  "type": "PipeSubstitution"
                }
              ],
              "callee": {
                "end": 129,
                "name": "startProfileAt",
                "start": 115,
                "type": "Identifier"
              },
              "end": 132,
              "start": 115,
              "type": "CallExpression",
              "type": "CallExpression"
            }
          ],
          "end": 132,
          "nonCodeMeta": {
            "nonCodeNodes": {
              "0": [
                {
                  "end": 52,
                  "start": 41,
                  "type": "NonCodeNode",
                  "value": {
                    "type": "blockComment",
                    "value": "|> arc({",
                    "style": "line"
                  }
                },
                {
                  "end": 74,
                  "start": 55,
                  "type": "NonCodeNode",
                  "value": {
                    "type": "blockComment",
                    "value": "angleEnd: 270,",
                    "style": "line"
                  }
                },
                {
                  "end": 98,
                  "start": 77,
                  "type": "NonCodeNode",
                  "value": {
                    "type": "blockComment",
                    "value": "angleStart: 450,",
                    "style": "line"
                  }
                },
                {
                  "end": 109,
                  "start": 101,
                  "type": "NonCodeNode",
                  "value": {
                    "type": "blockComment",
                    "value": "}, %)",
                    "style": "line"
                  }
                }
              ]
            },
            "startNodes": []
          },
          "start": 19,
          "type": "PipeExpression",
          "type": "PipeExpression"
        },
        "start": 7,
        "type": "VariableDeclarator"
      },
      "end": 132,
      "kind": "const",
      "start": 1,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 133,
  "start": 0
}
