src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__bb.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 25,
        "id": {
          "end": 5,
          "name": "my14",
          "start": 1,
          "type": "Identifier"
        },
        "init": {
          "end": 25,
          "left": {
            "end": 13,
            "left": {
              "end": 9,
              "raw": "4",
              "start": 8,
              "type": "Literal",
              "type": "Literal",
              "value": 4.0
            },
            "operator": "^",
            "right": {
              "end": 13,
              "raw": "2",
              "start": 12,
              "type": "Literal",
              "type": "Literal",
              "value": 2.0
            },
            "start": 8,
            "type": "BinaryExpression",
            "type": "BinaryExpression"
          },
          "operator": "-",
          "right": {
            "end": 25,
            "left": {
              "end": 21,
              "left": {
                "end": 17,
                "raw": "3",
                "start": 16,
                "type": "Literal",
                "type": "Literal",
                "value": 3.0
              },
              "operator": "^",
              "right": {
                "end": 21,
                "raw": "2",
                "start": 20,
                "type": "Literal",
                "type": "Literal",
                "value": 2.0
              },
              "start": 16,
              "type": "BinaryExpression",
              "type": "BinaryExpression"
            },
            "operator": "*",
            "right": {
              "end": 25,
              "raw": "2",
              "start": 24,
              "type": "Literal",
              "type": "Literal",
              "value": 2.0
            },
            "start": 16,
            "type": "BinaryExpression",
            "type": "BinaryExpression"
          },
          "start": 8,
          "type": "BinaryExpression",
          "type": "BinaryExpression"
        },
        "start": 1,
        "type": "VariableDeclarator"
      },
      "end": 25,
      "kind": "const",
      "start": 1,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 26,
  "start": 0
}
