src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__bc.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 74,
        "id": {
          "end": 7,
          "name": "x",
          "start": 6,
          "type": "Identifier"
        },
        "init": {
          "cond": {
            "end": 17,
            "raw": "true",
            "start": 13,
            "type": "Literal",
            "type": "Literal",
            "value": true
          },
          "digest": null,
          "else_ifs": [],
          "end": 74,
          "final_else": {
            "body": [
              {
                "end": 64,
                "expression": {
                  "end": 64,
                  "raw": "4",
                  "start": 63,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 4.0
                },
                "start": 63,
                "type": "ExpressionStatement",
                "type": "ExpressionStatement"
              }
            ],
            "end": 73,
            "start": 63
          },
          "start": 10,
          "then_val": {
            "body": [
              {
                "end": 33,
                "expression": {
                  "end": 33,
                  "raw": "3",
                  "start": 32,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 3.0
                },
                "start": 32,
                "type": "ExpressionStatement",
                "type": "ExpressionStatement"
              }
            ],
            "end": 42,
            "start": 32
          },
          "type": "IfExpression",
          "type": "IfExpression"
        },
        "start": 6,
        "type": "VariableDeclarator"
      },
      "end": 74,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 74,
  "start": 0
}
