src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__bd.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 115,
        "id": {
          "end": 1,
          "name": "x",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "cond": {
            "end": 11,
            "raw": "true",
            "start": 7,
            "type": "Literal",
            "type": "Literal",
            "value": true
          },
          "digest": null,
          "else_ifs": [
            {
              "cond": {
                "arguments": [
                  {
                    "end": 57,
                    "name": "radius",
                    "start": 51,
                    "type": "Identifier",
                    "type": "Identifier"
                  }
                ],
                "callee": {
                  "end": 50,
                  "name": "func",
                  "start": 46,
                  "type": "Identifier"
                },
                "end": 58,
                "start": 46,
                "type": "CallExpression",
                "type": "CallExpression"
              },
              "digest": null,
              "end": 84,
              "start": 38,
              "then_val": {
                "body": [
                  {
                    "end": 74,
                    "expression": {
                      "end": 74,
                      "raw": "4",
                      "start": 73,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 4.0
                    },
                    "start": 73,
                    "type": "ExpressionStatement",
                    "type": "ExpressionStatement"
                  }
                ],
                "end": 83,
                "start": 59
              },
              "type": "ElseIf"
            }
          ],
          "end": 115,
          "final_else": {
            "body": [
              {
                "end": 105,
                "expression": {
                  "end": 105,
                  "raw": "5",
                  "start": 104,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 5.0
                },
                "start": 104,
                "type": "ExpressionStatement",
                "type": "ExpressionStatement"
              }
            ],
            "end": 114,
            "start": 104
          },
          "start": 4,
          "then_val": {
            "body": [
              {
                "end": 27,
                "expression": {
                  "end": 27,
                  "raw": "3",
                  "start": 26,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 3.0
                },
                "start": 26,
                "type": "ExpressionStatement",
                "type": "ExpressionStatement"
              }
            ],
            "end": 36,
            "start": 26
          },
          "type": "IfExpression",
          "type": "IfExpression"
        },
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 115,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 115,
  "start": 0
}
