src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__be.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 4076
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declarations": [
        {
          "end": 14,
          "id": {
            "end": 5,
            "name": "x",
            "start": 4,
            "type": "Identifier"
          },
          "init": {
            "end": 14,
            "left": {
              "end": 9,
              "raw": "3",
              "start": 8,
              "type": "Literal",
              "type": "Literal",
              "value": 3.0
            },
            "operator": "==",
            "right": {
              "end": 14,
              "raw": "3",
              "start": 13,
              "type": "Literal",
              "type": "Literal",
              "value": 3.0
            },
            "start": 8,
            "type": "BinaryExpression",
            "type": "BinaryExpression"
          },
          "start": 4,
          "type": "VariableDeclarator"
        }
      ],
      "end": 14,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 14,
  "start": 0
}
