src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__bg.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 5,
        "id": {
          "end": 1,
          "name": "x",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "end": 5,
          "raw": "4",
          "start": 4,
          "type": "Literal",
          "type": "Literal",
          "value": 4.0
        },
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 5,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 5,
  "start": 0
}
