src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__bi.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 5,
        "id": {
          "end": 1,
          "name": "x",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "end": 5,
          "raw": "3",
          "start": 4,
          "type": "Literal",
          "type": "Literal",
          "value": 3.0
        },
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 5,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    },
    {
      "declaration": {
        "end": 30,
        "id": {
          "end": 17,
          "name": "obj",
          "start": 14,
          "type": "Identifier"
        },
        "init": {
          "end": 30,
          "properties": [
            {
              "end": 23,
              "key": {
                "end": 23,
                "name": "x",
                "start": 22,
                "type": "Identifier"
              },
              "start": 22,
              "type": "ObjectProperty",
              "value": {
                "end": 23,
                "name": "x",
                "start": 22,
                "type": "Identifier",
                "type": "Identifier"
              }
            },
            {
              "end": 29,
              "key": {
                "end": 26,
                "name": "y",
                "start": 25,
                "type": "Identifier"
              },
              "start": 25,
              "type": "ObjectProperty",
              "value": {
                "end": 29,
                "raw": "4",
                "start": 28,
                "type": "Literal",
                "type": "Literal",
                "value": 4.0
              }
            }
          ],
          "start": 20,
          "type": "ObjectExpression",
          "type": "ObjectExpression"
        },
        "start": 14,
        "type": "VariableDeclarator"
      },
      "end": 30,
      "kind": "const",
      "start": 14,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 30,
  "start": 0
}
