src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__bj.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 4521
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "end": 4,
      "expression": {
        "end": 4,
        "raw": "true",
        "start": 0,
        "type": "Literal",
        "type": "Literal",
        "value": true
      },
      "start": 0,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "end": 4,
  "start": 0
}
