src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__bk.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 4522
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "end": 5,
      "expression": {
        "end": 5,
        "name": "truee",
        "start": 0,
        "type": "Identifier",
        "type": "Identifier"
      },
      "start": 0,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "end": 5,
  "start": 0
}
